change the heading

--- a/Fourth.html
+++ b/Fourth.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-
+    <h2>Suraj</h2>
     <button class="hamburger-toggler">
         <span class="hamburger-icon">
             <span></span>
